- Fixed bug #50731 (Inconsistent namespaces sent to functions registered with spl_autoload_register)